Add styles and plugins to progress page. Add some bandaid styles.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -75,7 +75,7 @@ traditional keyboard (TK)... </div>
     <div class="grid-x grid-padding-x keyboard-progress">
       <div class="cell large-2"></div>
       <div class="cell large-8">
-        <div class="ct-chart ct-golden-section"></div>
+        <div class="ct-chart chart--medium"></div>
       </div>
       <div class="cell large-2"></div>
     </div>
