Format articles, get md working.

--- a/source/articles/the-experiment.html.md.erb
+++ b/source/articles/the-experiment.html.md.erb
@@ -1,6 +1,6 @@
 <div class="grid-container">
-<div class="grid-x grid-padding-x">
-<div class="cell large-8">
+  <div class="grid-x grid-padding-x">
+    <div class="cell large-8 section section--top" markdown="1">
 # The Experiment
 
 I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard.
@@ -91,6 +91,6 @@ I have defined playability as the ability to perform a given set of music, measu
 1. Long-tones are an exercise essential for wind instruments, in which the instrumentalist sustains a note to improve their tone quality. This exercise is not nearly as useful on the piano as pianists do not have control over sustained tone. This is an extreme example, but it illustrates that exercises might not benefit each instrument equally.
 
  It is not clear whether or not Hannon&#39;s finger exercises for piano will provide the same benefit the LIK as they will the traditional piano, or if the LIK will benefit from practicing scales and arpeggios for the same amount of time as the traditional keyboard. This could theoretically put the LIK at a disadvantage, but whether it actually will and to what extent will be difficult to determine.
-</div>
-</div>
+    </div>
+  </div>
 </div>
