--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -132,9 +132,10 @@ traditional keyboard (TK)... </div>
 </script>
 
 <script>
-  // FIX NEED TO DEBOUNCE
+  var heroHeight = $(".hero")[0].offsetHeight;
   window.addEventListener('scroll', function(e) {
-    if (window.pageYOffset > 570) {
+    console.log(window.pageYOffset, heroHeight);
+    if (window.pageYOffset > heroHeight) {
       $(".navbar")[0].classList.add("navbar--translucent");
     } else {
       $(".navbar")[0].classList.remove("navbar--translucent");
