--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -60,7 +60,7 @@
     </div>
     <ul>
       <li class="article">
-        <a href="#">
+        <a href="/reflections/the-initial-assessment">
           <div><h3>Assessment Reflection <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">The assessments didn't go quite as planned. The experiment has started off with some mistakes that are far more interesting than they are damaging.</div>
         </a>
