--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -57,6 +57,10 @@
   margin: 1.5rem 0;
 }
 
+.article-content {
+  font-size: 16px;
+}
+
 // progress is used in foundation
 .keyboard-progress {
   margin: 3rem 0;
